# diff_eq

./: .gitignore  Output.cpp  defines.h
diff1d_0519/0_beta/: run
diff1d_0519/2_class/: f.gn  main.cpp  run
diff1d_0519/3_files/: main.cpp  makefile  run
diff1d_0519_fw12/0_beta/: main.cpp
diff1d_0519_fw12/1_struct/: main.cpp  run
diff1d_0519_fw12/2_class/: main.cpp_bu  main.cpp_bu2
diff1d_0519_fw12/3_files/: ValuesDiffusion.h  defines.h
src/: Index.cpp  Index.h  Kernel.h  Output.cpp  Output.h  ValuesDiffusion.cpp  ValuesDiffusion.h  defines.h  err.gn  f.gn  main.cpp  main.cpp_bu3  makefile  makefile_ore  makefile~merged  pc12.sh  run  sub.q  thread.gn  val.gn
src_cpugpu/: Kernel.h  Output.cpp  Output.h  ValuesDiffusion.cpp  ValuesDiffusion.h  defines.h  main.cpp  makefile  pc12.sh
src_cuda/: Index.h  Kernel.h  Output.cpp  Output.h  ValuesDiffusion.cpp  ValuesDiffusion.h  defines.h  main.cpp  makefile  pc12.sh
src_elm/: Output.cpp  defines.h  main.cpp  val.gn
src_streambench/: main.c  main.cpp  makefile
