#!/usr/bin/gnuplot

set term png

set xlabel "dx"
set ylabel "err"

nx1=26
nx2=50
nx3=101

#set log y
#set yrange[*:1]
loop_sta =0
loop_end = 100
#loop_sta =10
#loop_end = 99
loop_skip = 1

 dt =0.1
 L = 6.25
 c_dif = 1

f(x) = exp(-c_dif*(pi/L)**2*x)



set output "comp_dx.png" 
p "comp_dx.dat_t50"   u 1:3 ti "t=50" w lp, \
  "comp_dx.dat_t10"   u 1:3 ti "t=10"  w lp, \
#  "SumMax_n26.dat"   u (dt*$2):6 ti "n=26" w lp ,\
#  f(x)                     ti "analytic"  w l

