#!/usr/bin/gnuplot

set term png
set xlabel "thread_num"
set ylabel "cal_time"

downsize=3
loop_sta =0
loop_end = 9
loop_skip = 1

#set cbrange[0:1]
#set xrange[-5:5]
#set yrange[-5:5]
#set surface
#set pm3d
#set pm3d map
#set view map
set log 

#do for[loop= loop_sta : loop_end :loop_skip ] {
set output "cal_time.png" 
#set title "t=".sprintf("%04d",loop)
#p "data/t=".sprintf("%04d",loop).".dat" u 1:2  w lp  lw 2
plot "th.dat" u 1:2  w l lw 2

#set output "png/fxy_t".sprintf("%04d", loop)."_downsize".sprintf("%01d",downsize).".png" 
#set title "t=".sprintf("%04d",loop)
#p "data/t=".sprintf("%04d",loop)."_downsize".sprintf("%01d",downsize).".dat" u 1:2  w lp  lw 2
#splot "data/ascii_value_step".sprintf("%04d",loop)."_downsize".sprintf("%01d",downsize).".dat" u 1:2:3  w pm3d

####debug
#loop=0
#set output "png/fx_t50_cos.png" 
#set title "t=50"
#p "data/t=50.dat"  u 1:2 w lp lw 2
#p "data/t=".sprintf("%02d",loop).".dat" u 1:2  w lp  lw 2
#}
