#!/usr/bin/gnuplot

set term png

set xlabel "x"
set ylabel "f"



nx1=26
nx2=50
nx3=101

set log y
set yrange[*:1]
loop_sta =0
loop_end = 100
#loop_sta =10
#loop_end = 99
loop_skip = 1

 dt =0.1
 L = 6.25
 c_dif = 1

f(x) = exp(-c_dif*(pi/L)**2*x)



set output "comp_fmax.png" 
p "SumMax_n200.dat"  u (dt*$2):6 ti "n=101" w lp, \
  "SumMax_n100.dat"   u (dt*$2):6 ti "n=51"  w lp, \
  "SumMax_n50.dat"   u (dt*$2):6 ti "n=26" w lp ,\
  f(x)                     ti "analytic"  w l


#do for[loop= loop_sta : loop_end :loop_skip ] {
##loop=0
#set output "png/fx_t".sprintf("%04d", loop).".png" 
#set title "t=".sprintf("%04d",loop)
##p "data/t=".sprintf("%02d",loop).".dat" u 1:2  w lp  lw 2
#p "data/t=".sprintf("%04d",loop).".dat" u 1:2  w lp  lw 2

#}
