#!/usr/bin/gnuplot

set term png

set xlabel "x"
set ylabel "f"

#loop_sta =10
#loop_end = 99
loop_sta =10
loop_end = 99
loop_skip = 1

#do for[loop= loop_sta : loop_end :loop_skip ] {
loop=50
##set output "png/fx_t".sprintf(%04d, loop).".png" 
##set title "t=".sprintf(%04d,loop)

set output "png/fx_t50_cos.png" 
set title "t=50"
p "data/t=50.dat"  u 1:2 w lp lw 2
#p "data/t=".sprintf(%02d,loop).".dat" u 1:2  w lp  
#}
